// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "OC2.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/oc2/src (151 matches)
   ✱ Glob "**/*db*" in packages/oc2 (6 matches)
   → Read packages/oc2/src/storage/db.ts [offset=1, limit=130]
   → Read packages/oc2/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OC2_DB|OC2_DB|OC2_DEV|Global\\.Path\\.data|data
     =" in packages/oc2/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "OC2.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/oc2/src (151 matches)
   ✱ Glob "**/*db*" in packages/oc2 (6 matches)
   → Read packages/oc2/src/storage/db.ts [offset=1, limit=130]
   → Read packages/oc2/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.
   ✱ Grep "export const OC2_DB|OC2_DB|OC2_DEV|Global\\.Path\\.data|data
     =" in packages/oc2/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  # List files

  $ ls

  file.ts

   ✱ Grep "OC2.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/oc2/src (151 matches)
   ✱ Glob "**/*db*" in packages/oc2 (6 matches)
   → Read packages/oc2/src/storage/db.ts [offset=1, limit=130]
   → Read packages/oc2/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OC2_DB|OC2_DB|OC2_DEV|Global\\.Path\\.data|data
     =" in packages/oc2/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"
  Check whether the next tool remains separated.


   ✱ Grep "OC2.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/oc2/src (151 matches)
   ✱ Glob "**/*db*" in packages/oc2 (6 matches)
   → Read packages/oc2/src/storage/db.ts [offset=1, limit=130]
   → Read packages/oc2/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OC2_DB|OC2_DB|OC2_DEV|Global\\.Path\\.data|data
     =" in packages/oc2/src (115 matches)"
`;

exports[`TUI inline tool wrapping separates a contiguous subagent group from inline tools 1`] = `
"   ✱ Grep "Task" (2 matches)

   ⠙ Explore Task — Inspect active task spacing
   ✓ General Task — Confirm completed task spacing
     ↳ 1 toolcall · 501ms

   → Read src/cli/cmd/tui/routes/session/index.tsx"
`;

exports[`TUI inline tool wrapping separates a subagent group after an expanded read 1`] = `
"   → Read src/cli/cmd/tui/routes/session/index.tsx
   ↳ Loaded src/cli/cmd/tui/routes/session/tools.tsx

   ✓ Explore Task — Inspect active task spacing
     ↳ 1 toolcall · 501ms"
`;
